--- a/navidrome/docker-compose.yml
+++ b/navidrome/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   navidrome:
-    image: deluan/navidrome:latest
+    image: deluan/navidrome:0.52.5@sha256:b154aebe8b33bae82c500ad0a3eb743e31da54c3bfb4e7cc3054b9a919b685c7
     restart: on-failure
     environment:
       - PUID=1000
