Update based on suggestions

--- a/omada-controller/docker-compose.yml
+++ b/omada-controller/docker-compose.yml
@@ -23,6 +23,6 @@ services:
       - SSL_CERT_NAME="tls.crt"
       - SSL_KEY_NAME="tls.key"
     volumes:
-      - ${APP_DATA_DIR}/data:/opt/tplink/EAPController/data
-      - ${APP_DATA_DIR}/logs:/opt/tplink/EAPController/logs
-      - ${APP_DATA_DIR}/work:/opt/tplink/EAPController/work
+      - ${APP_DATA_DIR}/data/config:/opt/tplink/EAPController/data
+      - ${APP_DATA_DIR}/data/logs:/opt/tplink/EAPController/logs
+      - ${APP_DATA_DIR}/data/work:/opt/tplink/EAPController/work
