--- a/omada-controller/umbrel-app.yml
+++ b/omada-controller/umbrel-app.yml
@@ -2,8 +2,7 @@ manifestVersion: 1
 id: omada-controller
 name: Omada Controller
 tagline: On-Premises Omada SDN Controller
-icon: https://cdn.jsdelivr.net/gh/walkxcode/dashboard-icons/svg/omada.svg
-category: Networking
+category: networking
 version: "5.14"
 port: 8088
 description: >-
@@ -25,11 +24,12 @@ description: >-
   - Easier Network Maintenance : WiFi heatmap simulator, visualizable network report, and batch & multi-site management benefit network maintenance.
 
 
-  ⚠️ - This app can take 15-20 minutes to start after installation.
+  ⚠️ - This app is RAM-intensive (4GB recommended) and can take 15-20 minutes to start after installation.
 
 developer: TP-Link / Matt Bentley
 website: https://github.com/mbentley/docker-omada-controller
 submitter: hugofnm
+submission: https://github.com/getumbrel/umbrel-apps/pull/1196
 repo: https://github.com/hugofnm/umbrel-omada-controller
 support: https://github.com/hugofnm/umbrel-omada-controller/issues
 gallery:
@@ -38,5 +38,4 @@ gallery:
   - 3.jpg
 dependencies: []
 path: ""
-defaultUsername: ""
-defaultPassword: ""
+releaseNotes: ""
