Update calibre-web to 0.6.22

--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: calibre-web
 category: files
 name: Calibre Web
-version: "0.6.21"
+version: "0.6.22"
 tagline: A clean web app for your eBooks
 description: >-
   Calibre-web is a web app providing a clean interface for browsing, reading and downloading eBooks using an existing Calibre database.
@@ -32,25 +32,14 @@ defaultUsername: "admin"
 defaultPassword: "admin123"
 torOnly: false
 releaseNotes: >-
-  This release contains various bug fixes, as well as the following new features:
-
-  - cb7 files are now supported for metadata extrcation of comicfiles (but not for comicreader)
+  This update includes several new features and bug fixes:
   
-  - Updated lubimyczytac metadata provider
-
-  - Cover size is adapted to requested size from kobo
-
-  - Added option "-o" to define logfile via command line
-
-  - Added "/opds/stats" route to generate a widget
-
-  - Reading position can be saved in comic reader
-
-  - Several dependencies are upgraded to newer versions
+  - Improved metadata fetching and OPDS catalog visibility.
+  - Added support for PRC book conversion and metadata backup.
+  - Enhanced search options and library location handling.
+  - Various bug fixes including metadata extraction, content security, and theme improvements.
+  - Security improvements for file uploads and cross-site scripting prevention.
   
-  - Additional translations: portuguese
-
-
-  Full release notes can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.21
+  Full release notes can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.22
 submitter: Xosten
 submission: https://github.com/getumbrel/umbrel-apps/pull/74
