--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: firefly-iii
 category: finance
 name: Firefly III
-version: "6.1.10"
+version: "6.1.19"
 tagline: Your personal finance manager
 description: >-
   Firefly III is a manager for your personal finances. It is self-hosted and open source. This means that it's free, it has no ads and no tracking.
@@ -45,6 +45,16 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >-
-  This release updates Firefly III from version 6.1.6 to 6.1.10. Full release notes can be found here: https://github.com/firefly-iii/firefly-iii/releases
+  This update includes several bug fixes and improvements:
+    - Fixed issues with split recurring transaction titles.
+    - Resolved error during Docker container startup.
+    - Improved search functionality for internal references.
+    - Corrected amount calculation in reconciliation for bank accounts.
+    - Fixed expected withdrawals for daily recurring transactions.
+    - Calendar now shows green fields for recurring transactions.
+    - Improved currency exchange rate downloader.
+
+
+  Full release notes are found at https://github.com/firefly-iii/firefly-iii/releases.
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/378
