Update frigate to v0.13.2

--- a/frigate/umbrel-app.yml
+++ b/frigate/umbrel-app.yml
@@ -17,7 +17,19 @@ description: >-
 
   - Your RTSP password (if needed) is the "default app password" that is displayed on Frigate's page in the app store (shown after install).
 releaseNotes: >-
-  This update takes Frigate from 0.12.1 to 0.13.2.
+  This update includes several improvements and bug fixes:
+  
+    - Optimized handling for stationary cars.
+  
+    - Enhanced Birdseye view.
+  
+    - Improved error messages for unsupported label uploads to Frigate+.
+  
+    - Better handling of non-video profiles in Onvif setup.
+  
+    - Clarified documentation for AMD CPUs and Raspberry Pi devices.
+  
+    - Fixed various issues and improved overall stability.
 
 
   Full release notes are available at https://github.com/blakeblackshear/frigate/releases
