Update ghostfolio to 2.98.0

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: ghostfolio
 category: finance
 name: Ghostfolio
-version: "2.83.0"
+version: "2.98.0"
 tagline: Manage your wealth like a boss
 description: >-
   Ghostfolio is a privacy-first, open source dashboard for your personal finances.
@@ -31,41 +31,47 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from 2.61.0 to v2.83.0, and includes numerous bug fixes, performance improvements, and new features. Here's what's new in the latest version:
+  This release upgrades Ghostfolio from 2.83.0 to v2.98.0, and includes numerous bug fixes, performance improvements, and new features. Here's what's new in the latest version:
   
 
   Added:
-
-    - Added an indicator for active filters (experimental)
-
-    - Added the absolute change column to the holdings table on the home page
-
+  
+    - Set up the language localization for Catalan (ca)
+  
 
   Changed:
-
-    - Improved the usability of the create or update activity dialog by preselecting the (only) account
+  
+    - Improved the account selector of the create or update activity dialog
     
-    - Improved the usability of the date range selector in the assistant
+    - Improved the handling of the numerical precision in the value component
     
-    - Refactored the holding detail dialog to a standalone component
+    - Skipped derived currencies in the get quotes functionality of the data provider service
     
-    - Refreshed the cryptocurrencies list
+    - Improved the language localization for Spanish (es)
     
-    - Refactored various pages to standalone components
+    - Upgraded angular from version 18.0.4 to 18.1.1
     
-    - Improved the delete all activities functionality on the portfolio activities page to work with the filters of the assistant
-
-    - Improved the language localization for German (de)
+    - Upgraded Nx from version 19.4.3 to 19.5.1
     
-    - Improved the language localization for Türkçe (tr)
+    - Upgraded prisma from version 5.16.1 to 5.17.0
   
 
   Fixed:
-
-    - Upgraded yahoo-finance2 from version 2.11.1 to 2.11.2 (causing pricing errors)
-    - Fixed the position detail dialog close functionality
+  
+    - Fixed the dividend import from a data provider for holdings without an account
     
+    - Fixed an issue in the public page related to a non-existent access
+  
 
-  For full release notes and additional changes from previous versions, please visit: https://github.com/ghostfolio/ghostfolio/releases
+  Special Thanks:
+  
+    - @DavidReque
+    
+    - @dtslvr
+    
+    - @GerardPolloRebozado
+  
+
+  Full release notes are found at https://github.com/ghostfolio/ghostfolio/releases.
 submitter: BeauAgst
 submission: https://github.com/getumbrel/umbrel-apps/pull/396
