--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,62 +2,46 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.109.2"
+version: "v1.110.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
 
-  
   ⚠️ Immich is under very active development. Expect bugs and changes. Do not use it as the only way to store your photos and videos!
 
-  
   Features:
-  
+
   - Upload and view videos and photos
-  
   - Auto backup when the app is opened
-  
   - Selective album(s) for backup
-  
   - Download photos and videos to a local device
-  
   - Multi-user support
-  
   - Album and Shared albums
-  
   - Scrubbable/draggable scrollbar
-  
   - Support RAW (HEIC, HEIF, DNG, Apple ProRaw)
-  
   - Metadata view (EXIF, map)
-  
   - Search by metadata, objects and image tags
-  
   - Administrative functions (user management)
-  
   - Background backup
-  
   - Virtual scroll
-  
   - OAuth support
-  
   - LivePhoto backup and playback
-  
   - User-defined storage structure
 releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
   
-  Welcome to version v1.109 of Immich. This release introduces an additional way for you to support Immich financially as well as bug fixes for various issues. Some of the highlights in this release include:
-
-  - Immich licenses (and https://buy.immich.app)
-    
-  - "My Immich" url forwarder (https://my.immich.app)
-
-  - Generate thumbnail for iOS18 HEIC
-
-  - Generate Motion Photos for Pixel 6, 7, and 8
-
+  Welcome to version v1.110.0 of Immich. This release addresses wording changes and introduces many bug fixes and enhancements. Some of the highlights include:
+  
+  - Migration to Immich hosted map tile server
+  
+  - Wording changes to purchase mechanism
+  
+  - Claiming product keys for past financial donors
+  
+  - TLS client certificate for the mobile app
+  
+  - Better OpenVINO support
 
   Full release notes are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
