--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jackett
 category: media
 name: Jackett
-version: "0.21.2446"
+version: "0.22.391"
 tagline: API support for your favorite torrent trackers
 description: >-
   Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, SickRage, CouchPotato, Mylar3, Lidarr, DuckieTV, qBittorrent, Nefarious, etc) into tracker-site-specific http queries,
@@ -34,11 +34,14 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This release updates Jackett from version 0.21.2163 to 0.21.2446.
-  It includes a fix for an issue where private/proxied indexers could not be used with companion apps like Sonarr and Radarr.
-  
-  
-  The full release notes are available at https://github.com/Jackett/Jackett/releases.
+  This update includes several bug fixes and improvements:
+    - Fixed issues with throttled providers and restart exceptions.
+    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
+    - Added support for additional languages and improved logging for subtitle scoring.
+    - Fixed issues with embedded subtitles and improved UI and error handling.
+
+
+  Full release notes are found at https://github.com/Jackett/Jackett/releases.
 permissions:
   - STORAGE_DOWNLOADS
 torOnly: false
