Update librespeed to 5.3.3

--- a/librespeed/umbrel-app.yml
+++ b/librespeed/umbrel-app.yml
@@ -2,32 +2,22 @@ manifestVersion: 1
 id: librespeed
 category: networking
 name: LibreSpeed
-version: "5.3.0"
+version: "5.3.3"
 tagline: Free and open source speedtest
 description: >-
   Free and open source speedtest. Measure internet speeds between your devices and your Umbrel.
 releaseNotes: >-
-  This update takes LibreSpeed from v5.2.5 to v5.3.0.
+  This update takes LibreSpeed from v5.3.0 to v5.3.3.
 
 
   Changes include:
 
-  - Improved docker file
+  - Improved docker image creation process
 
-  - update php to 8.2
+  - Added support for multiple image tags
 
-  - ios favicon
 
-  - adopt new getIP API
-
-  - improve documentation
-
-  - change units from Mbps to Mbit/s (only naming, no changed values)
-
-  - move examples to folder
-  
-
-  Full release notes are found at: https://github.com/librespeed/speedtest/releases/tag/5.3.0
+  Full release notes are found at: https://github.com/librespeed/speedtest/releases/tag/5.3.3
 developer: LibreSpeed
 website: https://librespeed.org/
 dependencies: []
