Modify Maybe repo URL

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -45,7 +45,7 @@ releaseNotes: >-
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
-repo: https://github.com/maybe-finance
+repo: https://github.com/maybe-finance/maybe
 support: https://github.com/maybe-finance/discussions
 port: 3063
 gallery:
