Update maybe to v0.1.0-alpha.12

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: maybe
 category: finance
 name: Maybe
-version: 'v0.1.0-alpha.11'
+version: 'v0.1.0-alpha.12'
 tagline: The OS for your personal finances
 description: >-
   Maybe is a fully (your finances are secure) open-source OS for your personal finances built by
@@ -22,26 +22,15 @@ description: >-
 
   2. Add your Synth API key to the .env file at ~/umbrel/app-data/maybe/.env
 releaseNotes: >-
-  Improvements in this release:
+  This update includes several bug fixes and improvements:
+    - Set last login time only on login instead of every action.
+    - Updated currency formatting in pie chart visualization.
+    - Implemented auto family syncs on login.
+    - Added basic portfolio views.
+    - Set minimum supported date for account entries.
 
 
-  - Additional error handling.
-
-  - Fallback for missing exchange rates.
-
-  - Easier balance editing.
-
-  - Ability to upload CSV when importing transactions.
-
-  - Use preferred currency as default when creating new accounts.
-
-  - Improvements to account synchronization.
-
-  - Added links to troubleshooting guides.
-
-
-
-  Full release notes available at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.11
+  Full release notes are found at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.12
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
