Update memos to v0.22.4

--- a/memos/umbrel-app.yml
+++ b/memos/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: memos
 category: files
 name: Memos
-version: "0.22.3"
+version: "0.22.4"
 tagline: Easily capture and share your great thoughts
 description: >-
   A privacy-first, lightweight note-taking service.
@@ -18,25 +18,17 @@ description: >-
 
   - RESTful API for third-party services. Embrace the power of integration and unleash new possibilities with our RESTful API support.
 releaseNotes: >-
-  New:
-
-  - Support editing memos directly in the inline editor instead of a dialog.
-
-  - Support displaying tags in a tree structure.
-
-
-  Enhancements:
-
-  - Tables now support rendering additional syntax
+  This update includes several enhancements and new features:
   
-  - HTML elements rendering supported
-
-  - Added a setting to enable link previews(disabled by default)
-
-  - Access token will be correctly deleted upon logout
-
-  - Disabling user registration has been moved to startup options/environment variables
-
+  - Added `password-auth` flag to control whether username and password login is enabled.
+  
+  - Support changing the date when editing memos.
+  
+  - Updated the default value of `public` to false, meaning user registration is not enabled by default.
+  
+  - Added calendar view on Home page to better review recent activities.
+  
+  - Removed the Timeline page.
   
   Full release notes are available at https://github.com/usememos/memos/releases
 developer: Memos
