Update metube to 2024-07-26

--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: metube
 category: media
 name: MeTube
-version: "2024-05-02"
+version: "2024-07-26"
 tagline: Download videos from YouTube
 description: >-
   Download videos from YouTube (and dozens of other sites) directly to your Umbrel.
@@ -11,10 +11,14 @@ dependencies: []
 repo: https://github.com/alexta69/metube
 port: 3700
 releaseNotes: >-
-  This update includes general bug fixes and performance improvements.
+  This update includes several bug fixes and improvements:
+    - Fixed issues with throttled providers and restart exceptions.
+    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
+    - Added support for additional languages and improved logging for subtitle scoring.
+    - Fixed issues with embedded subtitles and improved UI and error handling.
 
-
-  A full comparison of changes is available at https://github.com/alexta69/metube/compare/99ffa60...b1422e5
+  
+  Full release notes are found at https://github.com/alexta69/metube/releases.
 support: https://github.com/alexta69/metube/issues
 website: https://github.com/alexta69/metube
 gallery:
