Update paperless to v2.11.2

--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: paperless
 category: files
 name: Paperless-ngx
-version: "2.11.0"
+version: "2.11.2"
 tagline: Transform your physical documents into a searchable online archive
 description: >-
   Paperless-ngx is a community-supported open-source document management system that transforms your physical documents into a searchable online archive so you can keep, well, less paper.
@@ -23,9 +23,12 @@ description: >-
 
   - Paperless stores your documents plain on disk. Filenames and folders are managed by paperless and their format can be configured freely with different configurations assigned to different documents.
 releaseNotes: >-
-  This release updates Paperless-ngx from version to 2.7.2 to 2.11.0.
-
-
+  This update includes several bug fixes and improvements:
+  
+  - More clearly handles initialization permissions errors.
+  - Adds permissions information link from the web UI.
+  - Increases search input text contrast with light custom theme colors.
+  
   Full release notes are found at https://github.com/paperless-ngx/paperless-ngx/releases?page=1
 developer: Paperless-ngx Community
 website: https://docs.paperless-ngx.com/
