--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: portainer
 category: developer
 name: Portainer
-version: "2.19.1"
+version: "2.19.5"
 tagline: Run custom Docker containers on your Umbrel
 description: >-
   ⚠️ Make sure to only use named Docker volumes for your stacks and containers. Data in bind-mounted volumes
@@ -51,36 +51,12 @@ path: ""
 defaultUsername: "admin"
 defaultPassword: "changeme"
 releaseNotes: >-
-  This update of Portainer from 2.19.0 to 2.19.1 includes various bug fixes, improvements, and new features, including the following highlights.
+  This update includes several bug fixes and improvements:
+  
+    - Resolved CVE-2024-29296 by creating uniform response time for login attempts.
 
 
-  👉 Breaking changes:
-
-  - Changes to API format and checking of some requests - See rest API changes below for more details.
-
-
-  👉 Portainer:
-
-  - Fixed an issue where backup files were missing the Chisel private key. This could have disrupted communication between the Portainer server and agent after a restoration from backup.
-
-  - Improved the upgrade process for the Portainer server, upgrade process now halts on database migration errors, preventing database version mismatches for a more stable environment.
-
-  - Fixed an issue where toggles could be activated outside of their intended component area, potentially leading to inadvertent toggling.
-
-
-  👉 RestAPI:
-
-  - Fixed an issue introduced in 2.19.0 when Kubernetes environment metrics API features were enabled, where these features would return an ‘Unable to reach metrics API’ error.
-
-  - Introduced new format around the change of a user’s password via API.
-
-  - Updated the checking around change of a user via API.
-
-  - Fixed API endpoints that were broken in the 2.19.0 release, ensuring that they retain their previous functionality.
-
-
-  View full release notes here: https://github.com/portainer/portainer/releases/tag/2.19.1
-
+  Full release notes are found at https://github.com/portainer/portainer/releases.
 developer: Portainer
 submitter: Umbrel
 submission: https://github.com/getumbrel/umbrel-apps/pull/774
