--- a/stirling-pdf/umbrel-app.yml
+++ b/stirling-pdf/umbrel-app.yml
@@ -3,7 +3,7 @@ id: stirling-pdf
 name: Stirling PDF
 tagline: Merge, split, rotate, and convert PDFs with ease
 category: files
-version: "0.25.0"
+version: "0.26.1"
 port: 27829
 description: >-
   Stirling PDF is a robust, locally hosted web-based PDF manipulation tool that offers a comprehensive set of features to address
@@ -53,6 +53,18 @@ gallery:
   - 1.jpg
   - 2.jpg
   - 3.jpg
-releaseNotes: ""
+releaseNotes: >-
+  This update includes several enhancements and bug fixes:
+    - Language updates for better localization support.
+    - Improved compatibility with older Chrome versions.
+    - Added Odd-Even operation mode for the organize feature.
+    - Fixed issues with contextPath for root URI changes.
+    - Corrected PDF to image conversion for different page orientations and sizes.
+
+
+  We would appreciate your feedback on how we are doing! Please take a moment to fill out our survey: https://stirlingpdf.info/s/clwzgtfw7000gltkmwz1n212m
+
+
+  Full release notes are found at https://github.com/Stirling-Tools/Stirling-PDF/releases.
 dependencies: []
 path: ""
