Modify Syncthing repo URL

--- a/syncthing/umbrel-app.yml
+++ b/syncthing/umbrel-app.yml
@@ -16,7 +16,7 @@ description: >-
 developer: The Syncthing Foundation
 website: https://syncthing.net
 dependencies: []
-repo: https://github.com/syncthing
+repo: https://github.com/syncthing/syncthing
 support: https://forum.syncthing.net
 port: 8384
 gallery:
