Update umami to v2.12.1

--- a/umami/umbrel-app.yml
+++ b/umami/umbrel-app.yml
@@ -3,7 +3,7 @@ id: umami
 name: Umami
 tagline: Simple, fast, privacy-focused alternative to Google Analytics
 category: developer
-version: "2.11.3"
+version: "2.12.1"
 port: 25727
 description: >-
   Empowering insights. Preserving privacy.
@@ -47,6 +47,11 @@ gallery:
 defaultUsername: admin
 defaultPassword: umami
 dependencies: []
-releaseNotes: ""
-path: ""
+releaseNotes: >-
+  This update includes several bug fixes and improvements:
+    - Fixed team settings not showing.
+    - Fixed error in event data page.
+    - Fixed text overflow on user journey.
 
+  Full release notes are found at https://github.com/umami-software/umami/releases.
+path: ""
