Update wikijs to v2.5.303

--- a/wikijs/umbrel-app.yml
+++ b/wikijs/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: wikijs
 category: developer
 name: WikiJS
-version: "2.5.300"
+version: "2.5.303"
 tagline: Make documentation a joy to write
 description: >-
   The most powerful and extensible open source Wiki software.
@@ -30,22 +30,20 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: >-
-  ✨ New Features
+  This update includes several new features and bug fixes:
+  
+    - Added ACR Value option to OIDC Module
+  
+    - Added markdown-it-pivot-table rendering module
+  
 
-  - add ACR Value option to OIDC Module
+    - Reduced git concurrency to avoid lock file conflicts
+  
+    - Added compatibility with Node.js 18 and 20
+  
+    - Improved Keycloak authentication post logout redirect for Keycloak 18+
+  
 
-  - add markdown-it-pivot-table rendering module 
-
-
-  🐛 Bug Fixes
-
-  - git: Reduce git concurrency to avoid lock file conflicts.
-
-  - add node 18 + 20 compatibility 
-
-  - auth: keycloak authentication post logout redirect for Keycloak 18+
-
-
-  Full release notes here: https://github.com/requarks/wiki/releases/tag/v2.5.300
+  Full release notes are found at https://github.com/requarks/wiki/releases/tag/v2.5.303
 submitter: Pranshu Agrawal
 submission: https://github.com/getumbrel/umbrel-apps/pull/273
