updated submission url

--- a/onlyoffice-nextcloud/umbrel-app.yml
+++ b/onlyoffice-nextcloud/umbrel-app.yml
@@ -69,4 +69,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: a4004
-submission: /
+submission: https://github.com/getumbrel/umbrel-apps/pull/1288
