made releaseNotes empty

--- a/onlyoffice-nextcloud/umbrel-app.yml
+++ b/onlyoffice-nextcloud/umbrel-app.yml
@@ -19,39 +19,7 @@ description: >-
   ONLYOFFICE provides users with multiple editing tools and collaborative features
   ensuring greater team workflow, and seamless work with complex formatting and
   objects within your web solution.
-releaseNotes: >-
-  Summary of changes in this update:
-
-
-  - General Interface and Language Updates:
-    - Manageable functional buttons; new positions for Replace, Copy style, Clear style, Select all buttons.
-    - Added Serbian-Cyrillic and Portuguese translations, and Arabic regional settings.
-    - New color themes and internal help in Portuguese.
-    - Chat panel updated with a title and close button.
-
-
-  - Document and Spreadsheet Editors Enhancements:
-    - New toolbar button for document editing modes; added tooltips, page numbering, page color support, and updated paragraph styles.
-    - New spreadsheet functions and categories; improved cell and sheet management.
-    - Enhanced algorithm for Arabic text and RTL paragraphs.
-
-
-  - Presentation and Forms Improvements:
-    - New slide settings, animation pane, and master slide editing in Presentation Editor.
-    - Forms now in PDF format; various enhancements to form handling and appearance.
-
-
-  - PDF Editor and Security Enhancements:
-    - Added editing/viewing mode buttons, new annotation tools, and page management features.
-    - Numerous security vulnerabilities fixed, including MySQL SSL/TLS connection and several crash issues.
-
-
-  - Customization and Back-end Changes:
-    - New parameters for role configuration, logo visibility, and editing mode buttons.
-    - Updated WOPI functionality, improved mobile view, and new back-end config parameters.
-
-
-  See https://github.com/ONLYOFFICE/DocumentServer/releases/tag/v8.1.0 for the full changelog.
+releaseNotes: ""
 developer: Ascensio System SIA
 website: https://www.onlyoffice.com/
 dependencies:
@@ -69,4 +37,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: a4004
-submission: https://github.com/getumbrel/umbrel-apps/pull/1288
+submission: https://github%5C.com/getumbrel/umbrel%5C-apps/pull/1288
