updated submission url

--- a/onlyoffice-nextcloud/umbrel-app.yml
+++ b/onlyoffice-nextcloud/umbrel-app.yml
@@ -37,4 +37,4 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 submitter: a4004
-submission: https://github%5C.com/getumbrel/umbrel%5C-apps/pull/1288
+submission: https://github.com/getumbrel/umbrel-apps/pull/1288
