Update navidrome: applied suggestion for improvement in permissions

--- a/navidrome/docker-compose.yml
+++ b/navidrome/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - PGID=1000
     volumes:
       - ${APP_DATA_DIR}/data:/data
-      - ${UMBREL_ROOT}/data/storage/music:/music:rw
+      - ${UMBREL_ROOT}/data/storage/music:/music
