--- a/navidrome/umbrel-app.yml
+++ b/navidrome/umbrel-app.yml
@@ -48,6 +48,8 @@ gallery:
   - 2.jpg
   - 3.jpg
 path: ""
+permissions:
+  - STORAGE_DOWNLOADS
 releaseNotes: ""
 submitter: owmsoton
 submission: https://github.com/getumbrel/umbrel-apps/pull/1232
