Update Yucca tagline and description

--- a/yucca/umbrel-app.yml
+++ b/yucca/umbrel-app.yml
@@ -3,10 +3,12 @@ id: yucca
 category: automation
 name: Yucca
 version: "0.10.1"
-tagline: Simple NVR solution video surveillance
+tagline: Simple NVR video surveillance solution
 description: >-
-  Simple NVR solution video surveillance for home and business.  
-  Perfect for both a solution for safe cities with thousands of cameras and launching a subscriber service, as well as for home use self-hosted.
+  Yucca is a simple NVR video surveillance solution for home and business.
+  It is designed to support safe cities with thousands of cameras, subscriber services, and self-hosted home use.
+  
+  
   [Android app](https://play.google.com/store/apps/details?id=app.yucca.android&utm_source=umbrel)
 releaseNotes: ""
 developer:  Yucca Stream
