Add gallery images

--- a/samba/umbrel-app.yml
+++ b/samba/umbrel-app.yml
@@ -32,7 +32,10 @@ permissions:
 submission: https://github.com/getumbrel/umbrel-apps/pull/1161
 repo: https://github.com/dockur/samba
 support: https://github.com/dockur/samba/issues
-gallery: []
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
