Add gallery images

--- a/budibase/umbrel-app.yml
+++ b/budibase/umbrel-app.yml
@@ -33,7 +33,10 @@ submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/1178
 repo: https://github.com/Budibase/budibase
 support: https://github.com/Budibase/budibase/discussions
-gallery: []
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 path: ""
