--- a/duplicati/umbrel-app.yml
+++ b/duplicati/umbrel-app.yml
@@ -33,7 +33,10 @@ submitter: Sharknoon
 submission: https://github.com/getumbrel/umbrel-apps/pull/1179
 repo: https://github.com/duplicati/duplicati
 support: https://forum.duplicati.com/
-gallery: []
+gallery:
+  - 1.jpg
+  - 2.jpg
+  - 3.jpg
 releaseNotes: ""
 dependencies: []
 permissions:
