fix release notes formatting

--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -32,13 +32,14 @@ defaultUsername: "admin"
 defaultPassword: "admin123"
 torOnly: false
 releaseNotes: >-
-  This update includes several new features and bug fixes:
+  This update includes several new features and bug fixes, including:
   
-  - Improved metadata fetching and OPDS catalog visibility.
-  - Added support for PRC book conversion and metadata backup.
-  - Enhanced search options and library location handling.
-  - Various bug fixes including metadata extraction, content security, and theme improvements.
-  - Security improvements for file uploads and cross-site scripting prevention.
+    - Improved metadata fetching and OPDS catalog visibility.
+    - Added support for PRC book conversion and metadata backup.
+    - Enhanced search options and library location handling.
+    - Various bug fixes including metadata extraction, content security, and theme improvements.
+    - Security improvements for file uploads and cross-site scripting prevention.
+    - and more!
   
   Full release notes can be found here: https://github.com/janeczku/calibre-web/releases/tag/0.6.22
 submitter: Xosten
