--- a/calibre-web/umbrel-app.yml
+++ b/calibre-web/umbrel-app.yml
@@ -5,18 +5,15 @@ name: Calibre Web
 version: "0.6.22"
 tagline: A clean web app for your eBooks
 description: >-
-  Calibre-web is a web app providing a clean interface for browsing, reading and downloading eBooks using an existing Calibre database.
+  Calibre-Web is a web app providing a clean interface for browsing, reading and downloading eBooks using an existing Calibre database.
   It is also possible to integrate google drive and edit metadata and your calibre library through the app itself. 
-  It's the webbapp version of the well known Calibre for desktop.
   
   
-  On the initial setup screen, enter /books as your calibre library location.
-  
-  
-  If you wish to enable the upload feature, please go to "Settings > Edit Basic Configuration > Feature Configuration > Enable Upload".
-  
-  
-  It's recommended to read through the official documentation, which is available at https://github.com/janeczku/calibre-web/wiki
+  🛠️ SET-UP INSTRUCTIONS
+
+    - Library Setup: On the initial setup screen, enter /books as your calibre library location.
+    - Uploading eBooks: If you wish to enable the upload feature, navigate to Admin > Edit Basic Configuration > Feature Configuration and toggle "Enable Upload".
+    - Documentation: It is recommended to read through the official documentation available at https://github.com/janeczku/calibre-web/wiki
 developer: Janeczku
 website: https://github.com/janeczku/calibre-web
 dependencies: []
