tweak release notes

--- a/code-server/umbrel-app.yml
+++ b/code-server/umbrel-app.yml
@@ -13,8 +13,7 @@ description: >-
 
   By running all intensive tasks run on your Umbrel, preserve battery life of your devices when you're on the go.
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Updated to Code 1.91.1.
+  This release updates the underlying VS Code editor to 1.91.1.
 
 
   Full release notes are available at https://github.com/coder/code-server/releases.
