add security advisory

--- a/firefly-iii/umbrel-app.yml
+++ b/firefly-iii/umbrel-app.yml
@@ -45,6 +45,9 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >-
+  🚨 This update includes fixes for a security issue. Please update as soon as possible. Specific details can be found at https://github.com/firefly-iii/firefly-iii/security/advisories/GHSA-4gm4-c4mh-4p7w
+  
+
   This update includes several bug fixes and improvements:
     - Fixed issues with split recurring transaction titles.
     - Resolved error during Docker container startup.
