--- a/esphome/umbrel-app.yml
+++ b/esphome/umbrel-app.yml
@@ -27,7 +27,11 @@ releaseNotes: >-
   ⚠️ As usual, please check that your configurations are still working correctly after updating.
 
 
-  This release updates ESPHome from version 2023.12.9 to 2024.7.2. A full list of new features, new component support, breaking changes, and bug fixes for versions 
-  between 2023.12.9 and 2024.7.2 can be found at https://github.com/esphome/esphome/releases.
+  This is a bugfix release that includes the following changes:
+    - Timeout Adjustment: Default timeout set to 4.5 seconds.
+    - Redirect Fix: Improved HTTP redirect handling.
+  
+
+  Full release notes can be found at https://github.com/esphome/esphome/releases.
 submitter: ShonP40
 submission: https://github.com/getumbrel/umbrel-apps/pull/43
