Change HTTP port

--- a/omada-controller/umbrel-app.yml
+++ b/omada-controller/umbrel-app.yml
@@ -4,7 +4,7 @@ name: Omada Controller
 tagline: On-Premises Omada SDN Controller
 category: networking
 version: "5.14"
-port: 8088
+port: 8078
 description: >-
   Omada Software Controller
 
@@ -24,7 +24,7 @@ description: >-
   - Easier Network Maintenance : WiFi heatmap simulator, visualizable network report, and batch & multi-site management benefit network maintenance.
 
 
-  ⚠️ - This app is RAM-intensive (4GB recommended) and can take 15-20 minutes to start after installation.
+  ⚠️ - This app is RAM-intensive (+4GB recommended) and can take 15-20 minutes to start after installation.
 
 developer: TP-Link / Matt Bentley
 website: https://github.com/mbentley/docker-omada-controller
