tweak release notes

--- a/ghostfolio/umbrel-app.yml
+++ b/ghostfolio/umbrel-app.yml
@@ -31,46 +31,24 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: >
-  This release upgrades Ghostfolio from 2.83.0 to v2.98.0, and includes numerous bug fixes, performance improvements, and new features. Here's what's new in the latest version:
+  Here's what's new in this release:
   
 
   Added:
   
     - Set up the language localization for Catalan (ca)
   
-
   Changed:
   
     - Improved the account selector of the create or update activity dialog
-    
     - Improved the handling of the numerical precision in the value component
-    
     - Skipped derived currencies in the get quotes functionality of the data provider service
-    
     - Improved the language localization for Spanish (es)
-    
-    - Upgraded angular from version 18.0.4 to 18.1.1
-    
-    - Upgraded Nx from version 19.4.3 to 19.5.1
-    
-    - Upgraded prisma from version 5.16.1 to 5.17.0
   
-
   Fixed:
   
     - Fixed the dividend import from a data provider for holdings without an account
-    
     - Fixed an issue in the public page related to a non-existent access
-  
-
-  Special Thanks:
-  
-    - @DavidReque
-    
-    - @dtslvr
-    
-    - @GerardPolloRebozado
-  
 
   Full release notes are found at https://github.com/ghostfolio/ghostfolio/releases.
 submitter: BeauAgst
