Update immich to v1.111.0

--- a/immich/umbrel-app.yml
+++ b/immich/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1.1
 id: immich
 category: files
 name: Immich
-version: "v1.109.2"
+version: "v1.111.0"
 tagline: High-performance photo and video backup solution
 description: >-
   An open-source and high-performance self-hosted backup solution for the videos and photos on your mobile device
@@ -48,17 +48,13 @@ releaseNotes: >-
   ⚠️ As usual, please check that your mobile app is compatible with this release of Immich.
 
   
-  Welcome to version v1.109 of Immich. This release introduces an additional way for you to support Immich financially as well as bug fixes for various issues. Some of the highlights in this release include:
-
-  - Immich licenses (and https://buy.immich.app)
-    
-  - "My Immich" url forwarder (https://my.immich.app)
-
-  - Generate thumbnail for iOS18 HEIC
-
-  - Generate Motion Photos for Pixel 6, 7, and 8
-
-
+  Welcome to version v1.111.0 of Immich. This release focuses on UI enhancement, accessibility, and refactoring and adds a new editor feature to the mobile app, which includes photo rotation and cropping. Some of the key highlights include:
+  
+    - Photo editor on the mobile app
+  
+    - Notable fix: Random logout on the mobile app when the connection between the app and server is unstable
+  
+  
   Full release notes are found at https://github.com/immich-app/immich/releases
 developer: Alex Tran
 website: https://www.immich.app
