Make release notes generic

--- a/invoice-ninja/umbrel-app.yml
+++ b/invoice-ninja/umbrel-app.yml
@@ -20,10 +20,8 @@ gallery:
 - 3.jpg
 path: ''
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Improved performance and stability.
-    - Enhanced security measures.
-    - Minor UI adjustments for better user experience.
+  This release takes invoice-ninja from version 5.8.33 to 5.10.16.
+
 
   Full release notes are found at https://github.com/invoiceninja/invoiceninja/releases.
 
