--- a/jackett/umbrel-app.yml
+++ b/jackett/umbrel-app.yml
@@ -2,7 +2,7 @@ manifestVersion: 1
 id: jackett
 category: media
 name: Jackett
-version: "0.22.391"
+version: "0.22.393"
 tagline: API support for your favorite torrent trackers
 description: >-
   Jackett works as a proxy server: it translates queries from apps (Sonarr, Radarr, SickRage, CouchPotato, Mylar3, Lidarr, DuckieTV, qBittorrent, Nefarious, etc) into tracker-site-specific http queries,
@@ -34,12 +34,10 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Fixed issues with throttled providers and restart exceptions.
-    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
-    - Added support for additional languages and improved logging for subtitle scoring.
-    - Fixed issues with embedded subtitles and improved UI and error handling.
+  Changes:
 
+    - Added a new public site.
+    - Updated categories for Rutracker.
 
   Full release notes are found at https://github.com/Jackett/Jackett/releases.
 permissions:
