tweak release notes wording

--- a/jellyfin/umbrel-app.yml
+++ b/jellyfin/umbrel-app.yml
@@ -32,7 +32,7 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  This update includes the following bug fixes:
     - Properly escaped paths in concat file for BDMV.
     - Fixed localization of audio title.
     - Fixed season handling ("Season Unknown" / unnecessary empty seasons).
