use 5.3.2 release notes because 5.3.3 are not relevant

--- a/librespeed/umbrel-app.yml
+++ b/librespeed/umbrel-app.yml
@@ -7,17 +7,14 @@ tagline: Free and open source speedtest
 description: >-
   Free and open source speedtest. Measure internet speeds between your devices and your Umbrel.
 releaseNotes: >-
-  This update takes LibreSpeed from v5.3.0 to v5.3.3.
+  What's Changed:
 
+    - Added IPv6 ULA regex match.
+    - Improved Apache startup process.
+    - Enhanced IPv6 regex matching.
+    - Fixed download speed issue on certain platforms.
 
-  Changes include:
-
-  - Improved docker image creation process
-
-  - Added support for multiple image tags
-
-
-  Full release notes are found at: https://github.com/librespeed/speedtest/releases/tag/5.3.3
+  Full release notes are found at: https://github.com/librespeed/speedtest/releases.
 developer: LibreSpeed
 website: https://librespeed.org/
 dependencies: []
