generalize release notes link

--- a/maybe/umbrel-app.yml
+++ b/maybe/umbrel-app.yml
@@ -30,7 +30,7 @@ releaseNotes: >-
     - Set minimum supported date for account entries.
 
 
-  Full release notes are found at https://github.com/maybe-finance/maybe/releases/tag/v0.1.0-alpha.12
+  Full release notes are found at https://github.com/maybe-finance/maybe/releases.
 developer: Maybe
 website: https://maybe.co/
 dependencies: []
