change release notes

--- a/metube/umbrel-app.yml
+++ b/metube/umbrel-app.yml
@@ -11,14 +11,7 @@ dependencies: []
 repo: https://github.com/alexta69/metube
 port: 3700
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Fixed issues with throttled providers and restart exceptions.
-    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
-    - Added support for additional languages and improved logging for subtitle scoring.
-    - Fixed issues with embedded subtitles and improved UI and error handling.
-
-  
-  Full release notes are found at https://github.com/alexta69/metube/releases.
+  The changelog for this release can be found at https://github.com/alexta69/metube/compare/b1422e5...dc894ef
 support: https://github.com/alexta69/metube/issues
 website: https://github.com/alexta69/metube
 gallery:
