tweak release notes

--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -4,8 +4,7 @@ category: automation
 name: n8n
 version: "1.51.2"
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Fixed issue with existing credentials not opening in HTTP agent tool.
+  This update fixes an issue with existing credentials not opening in HTTP agent tool.
 
 
   Full release notes are found at https://github.com/n8n-io/n8n/releases/tag/n8n%401.51.2.
