generalize release notes link

--- a/n8n/umbrel-app.yml
+++ b/n8n/umbrel-app.yml
@@ -7,7 +7,7 @@ releaseNotes: >-
   This update fixes an issue with existing credentials not opening in HTTP agent tool.
 
 
-  Full release notes are found at https://github.com/n8n-io/n8n/releases/tag/n8n%401.51.2.
+  Full release notes are found at https://github.com/n8n-io/n8n/releases.
 tagline: Build complex workflows, really fast
 description: >-
   n8n is an extendable workflow automation tool. With a fair-code distribution model, n8n will always have visible source code, 
