--- a/node-red-standalone/umbrel-app.yml
+++ b/node-red-standalone/umbrel-app.yml
@@ -14,24 +14,17 @@ description: >-
 
   The flows created in Node-RED are stored using JSON which can be easily imported and exported for sharing with others. An online flow library allows you to share your best flows with the world. 
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  What's Changed:
   
     - Ensure mermaid.min.js is cached properly between loads of the editor
-  
     - Guard against undefined sessions in multiplayer
-  
     - Allow auth cookie name to be customised
-  
     - Fix node validation if the property is not required
-  
     - Clean up orphaned editors
-  
     - Improve the editor's French translations
-  
     - Use a more subtle border on the header
 
-
-  Full release notes are found at https://github.com/node-red/node-red/releases/tag/4.0.2
+  Full release notes are found at https://github.com/node-red/node-red/releases
 developer: OpenJS Foundation
 website: https://nodered.org
 dependencies: []
