--- a/node-red/umbrel-app.yml
+++ b/node-red/umbrel-app.yml
@@ -34,24 +34,17 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  What's Changed:
   
     - Ensure mermaid.min.js is cached properly between loads of the editor
-  
     - Guard against undefined sessions in multiplayer
-  
     - Allow auth cookie name to be customised
-  
     - Fix node validation if the property is not required
-  
     - Clean up orphaned editors
-  
     - Improve the editor's French translations
-  
     - Use a more subtle border on the header
 
-
-  Full release notes are found at https://github.com/node-red/node-red/releases/tag/4.0.2
+  Full release notes are found at https://github.com/node-red/node-red/releases
 defaultUsername: umbrel
 defaultPassword: moneyprintergobrrr
 torOnly: false
