--- a/octoprint/umbrel-app.yml
+++ b/octoprint/umbrel-app.yml
@@ -17,22 +17,18 @@ support: https://community.octoprint.org/
 port: 5003
 submitter: mateosilguero
 releaseNotes: >-
-  This update brings Octoprint from 1.9.3 to 1.10.2
+  ✋ Heads-up
+
+    As of Octoprint 1.10.0, you are required to re-enter your password on critical operations (e.g. adding/changing/deleting users and groups, installing plugins, revealing the deprecated global API key, etc).
 
 
   🐛 Bug fixes
 
-  - Fixed a translation string in the German translation.
-  - Fixed a third-party dependency change that broke a development command.
-  - Improved the behavior of the "Hide successful prints" filter in the file list.
-  - Fixed an import to be compatible with Jinja2>=3.1.3.
-  - Pinned pydantic to 1.10.16 to work around an issue with Python 3.12.4.
+    - Fixed a translation string in the German translation.
+    - Fixed a third-party dependency change that broke a development command.
+    - Improved the behavior of the "Hide successful prints" filter in the file list.
 
-
-  Special thanks to everyone who contributed to this bugfix release!
-
-
-  Full release notes are found at https://github.com/OctoPrint/OctoPrint/releases/tag/1.10.2
+  Full release notes are found at https://github.com/OctoPrint/OctoPrint/releases
 submission: https://github.com/getumbrel/umbrel-apps/pull/449
 gallery:
   - 1.jpg
