--- a/minio/docker-compose.yml
+++ b/minio/docker-compose.yml
@@ -8,7 +8,7 @@ services:
          PROXY_AUTH_ADD: "false"
 
    web:
-      image: "quay.io/minio/minio:RELEASE.2024-07-26T20-48-21Z@sha256:9ef3d0514c0636e86e3db6b2a21c21d4035c17a47ea5464658f2f5d24afd15c6"
+      image: quay.io/minio/minio:RELEASE.2024-07-26T20-48-21Z@sha256:0bdb62054da7782ab5c23729df4730079dd35bcf03b780819e0f7ddcb6b9f4bc
       restart: on-failure
       user: "1000:1000"
       stop_grace_period: 1m
