format release notes

--- a/paperless/umbrel-app.yml
+++ b/paperless/umbrel-app.yml
@@ -23,13 +23,13 @@ description: >-
 
   - Paperless stores your documents plain on disk. Filenames and folders are managed by paperless and their format can be configured freely with different configurations assigned to different documents.
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  Changes:
   
-  - More clearly handles initialization permissions errors.
-  - Adds permissions information link from the web UI.
-  - Increases search input text contrast with light custom theme colors.
+    - More clearly handles initialization permissions errors.
+    - Adds permissions information link from the web UI.
+    - Increases search input text contrast with light custom theme colors.
   
-  Full release notes are found at https://github.com/paperless-ngx/paperless-ngx/releases?page=1
+  Full release notes are found at https://github.com/paperless-ngx/paperless-ngx/releases
 developer: Paperless-ngx Community
 website: https://docs.paperless-ngx.com/
 dependencies: []
