format release notes

--- a/pocketbase/umbrel-app.yml
+++ b/pocketbase/umbrel-app.yml
@@ -41,8 +41,7 @@ gallery:
 path: /_/
 dependencies: []
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-    - Improved file delete performance when using the local filesystem.
-    - Updated Go dependencies.
+  This update improves file delete performance when using the local filesystem.
+
 
   Full release notes are found at https://github.com/pocketbase/pocketbase/releases.
