--- a/portainer/umbrel-app.yml
+++ b/portainer/umbrel-app.yml
@@ -51,9 +51,8 @@ path: ""
 defaultUsername: "admin"
 defaultPassword: "changeme"
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
-  
-    - Resolved CVE-2024-29296 by creating uniform response time for login attempts.
+  This update resolves a security vulnerability in Portainer, by creating uniform response time for login attempts.
+  More details can be found at https://github.com/advisories/GHSA-87x6-8m9v-g8c2
 
 
   Full release notes are found at https://github.com/portainer/portainer/releases.
