Add release notes

--- a/prowlarr/umbrel-app.yml
+++ b/prowlarr/umbrel-app.yml
@@ -37,13 +37,15 @@ path: ""
 defaultUsername: ""
 defaultPassword: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  Changes:
   
-    - Fixed issues with throttled providers and restart exceptions.
-    - Improved compatibility with case insensitive filesystems and fixed various provider-related errors.
-    - Added support for additional languages and improved logging for subtitle scoring.
-    - Fixed issues with embedded subtitles and improved UI and error handling.
-
+    - Updated multiple translations.
+    - Removed PropTypes.
+    - Converted Add Indexer Modal to TypeScript.
+    - Sorted indexer query stats by a sum of all types.
+    - Improved messaging for no results with applied filters.
+    - Improved elapsed time tracking for grabs.
+    - Fixed issue with searching for daily episodes using IDs.
 
   Full release notes are found at https://github.com/Prowlarr/Prowlarr/releases.
 torOnly: false
