tweak release notes

--- a/radarr/umbrel-app.yml
+++ b/radarr/umbrel-app.yml
@@ -28,13 +28,12 @@ gallery:
   - 3.jpg
 path: ""
 releaseNotes: >-
-  This update includes several bug fixes and improvements:
+  Changes
   
     - Multiple translations updated.
-    - Improved compatibility with qBittorrent and SABnzbd.
-    - Enhanced UI with new sorting options and tag displays.
+    - New sorting options and tag displays.
     - Fixed various issues related to file paths and quality profiles.
-    - Updated to dotnet 6.0.32 for better performance and security.
+    - and more.
   
   Full release notes for Radarr are available at https://github.com/Radarr/Radarr/releases
 defaultUsername: ""
