tweak release notes

--- a/rotki/umbrel-app.yml
+++ b/rotki/umbrel-app.yml
@@ -25,10 +25,15 @@ repo: https://github.com/rotki/rotki
 support: https://github.com/rotki/rotki/issues
 port: 8084
 releaseNotes: >-
-  This update includes several improvements and bug fixes:
-    - Fixed issues for Windows users and improved pagination in the manual balances section.
-    - Re-added support for some low-powered CPUs that were not compatible with the previous version.
-  
+  ⚠️ EVM history events will be re-decoded the first time you go to the history events page after you open the new version.
+  You can monitor progress by pressing the 3 dots menu on the top right. Have patience until redecoding finished.
+
+
+  Bug Fixes:
+    - Eigenlayer LST pending withdrawals that have been completed should no longer count as user balance.
+    - Assets section will now show correct number of assets on any page when excluding ignored assets.
+    - Prices of HOP LP tokens will now properly show up for all pools.
+    - Fixed manual pagination.  
 
   Full release notes are found at https://github.com/rotki/rotki/releases
 gallery:
