tweak release notes

--- a/tailscale/umbrel-app.yml
+++ b/tailscale/umbrel-app.yml
@@ -28,15 +28,12 @@ path: ""
 deterministicPassword: false
 torOnly: false
 releaseNotes: |
-  This release updates Tailscale from v1.68.1 to v1.70.0.
-
-
   This update includes several bug fixes and improvements:
     - Improved NAT traversal for some uncommon scenarios.
     - Optimized sending firewall rules to clients more efficiently.
     - Fixed DNS leak issue on Windows.
     - Fixed Taildrive server no longer starts unnecessarily when no drives are configured.
-
+    - Switching from unstable to stable tracks using the "tailscale update" command now works correctly
 
   Full release notes and detailed information is available at https://github.com/tailscale/tailscale/releases
 submitter: Umbrel
