tweak release notes

--- a/tautulli/umbrel-app.yml
+++ b/tautulli/umbrel-app.yml
@@ -29,19 +29,13 @@ defaultUsername: ""
 defaultPassword: ""
 torOnly: false
 releaseNotes: |
-  This release updates Tautulli from v2.13.2 to v2.14.3 which includes:
+  Changes:
 
-
-  - Fixed issues with the history table not loading when clicking on the graphs in some instances.
-  
-  - Fixed issues with the scheduled tasks table not loading when certain tasks are disabled.
-  
-  - Removed unnecessary Remote Server checkbox from the settings page.
-  
-  - Fixed webserver not restarting after the setup wizard.
-  
-  - Workaround for webserver crashing in some instances.
-
+    - Fixed issues with the history table not loading when clicking on the graphs in some instances.
+    - Fixed issues with the scheduled tasks table not loading when certain tasks are disabled.
+    - Removed unnecessary Remote Server checkbox from the settings page.
+    - Fixed webserver not restarting after the setup wizard.
+    - Workaround for webserver crashing in some instances.
 
   Full release notes and detailed information are available at https://github.com/Tautulli/Tautulli/releases
 submitter: Pranshu Agrawal
